# http-api

./: .gitlab-ci.yml  CLAUDE.md  README.txt
lib/evhtp/include/evhtp/: config.h
src/: CMakeLists.txt  http_api.cpp  http_api.h  multipart_parser.h  multipart_reader.h
test/: CMakeLists.txt  dashboard.cpp  dashboard.h  main.cpp
test/client/: CMakeLists.txt  main.cpp
test/scripts/: load_delayed_answer.sh  load_json.sh  load_json_chunked.sh  load_page.sh  quit_server.sh  upload_file.sh
test/server/: CMakeLists.txt  dashboard.cpp  main.cpp
